--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
         <p>Join OneCommunity and help build a stronger, more connected local network through donations, volunteering, and collaboration.</p>
         <!-- Hero Images Side by Side -->
         <div style="display: flex; justify-content: center; gap: 2em; margin: 2em auto; max-width: 900px; flex-wrap: wrap;">
-          <img src="assets/community-solidarity.jpg" alt="Community working together" style="width: 400px; height: 300px; object-fit: cover; border-radius: 12px; box-shadow: 0 2px 12px rgba(0,0,0,0.08);">
-          <img src="assets/girls-school.png" alt="two young girls studying together" style="width: 400px; height: 300px; object-fit: cover; border-radius: 12px; box-shadow: 0 2px 12px rgba(0,0,0,0.08);">
+          <img src="community-solidarity.jpg" alt="Community working together" style="width: 400px; height: 300px; object-fit: cover; border-radius: 12px; box-shadow: 0 2px 12px rgba(0,0,0,0.08);">
+          <img src="girls-school.png" alt="two young girls studying together" style="width: 400px; height: 300px; object-fit: cover; border-radius: 12px; box-shadow: 0 2px 12px rgba(0,0,0,0.08);">
         </div>
 
         <div class="hero-ctas">
